Prepare for upload to TEST

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -193,9 +193,7 @@
 
             $("#dsb_hl").click(dashboard_hl_init);
 
-            dashboard_hl_init();
-
-
+            // dashboard_hl_init();
         });
 
 
