--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -189,6 +189,7 @@
             $("#rp_pil_vl_ride_recent_period").click(on_report_click);
             $("#rp_center_daily_by_month").click(on_report_click);
             $("#rp_center_monthly_by_year").click(on_report_click);
+            $("#rp_center_patients_rides").click(on_report_click);
 
 
             $("#dsb_hl").click(dashboard_hl_init);
@@ -295,6 +296,7 @@
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר המתנדבים המסיעים פר חודש</a></li>
                                         <li><a class="report_link_cls" id="rp_center_daily_by_month"> מרכז תיאום - מבט יומי</a></li>
                                         <li><a class="report_link_cls" id="rp_center_monthly_by_year"> מרכז תיאום - מבט חודשי</a></li>
+                                        <li><a class="report_link_cls" id="rp_center_patients_rides"> מרכז תיאום - הסעת חולים</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -408,7 +410,7 @@
                                             <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
                                             <th title="Patient" class="timeCustomWidth">חולה</th>
                                             <th title="Origin" class="timeCustomWidth">מוצא</th>
-                                            <th title="Destionation" class="timeCustomWidth">יעד</th>
+                                            <th title="Destination" class="timeCustomWidth">יעד</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
@@ -469,6 +471,21 @@
                                             <th title="11" class="timeCustomWidth">11</th>
                                             <th title="12" class="timeCustomWidth">12</th>
                                             <th title="Total" class="timeCustomWidth">סה"כ שנתי</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_center_patients_rides" style="display:none" class="card-box table-responsive">
+                                <table id="table_center_patients_rides" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Date" class="timeCustomWidth">תאריך</th>
+                                            <th title="Patient" class="timeCustomWidth">חולה</th>
+                                            <th title="Origin" class="timeCustomWidth">מוצא</th>
+                                            <th title="Destination" class="timeCustomWidth">יעד</th>
+                                            <th title="Hospital" class="timeCustomWidth">בית חולים</th>
 
                                         </tr>
                                     </thead>
