--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -489,6 +489,12 @@
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
+                                    <tfoot>
+                                        <tr>
+                                            <th colspan="3" style="text-align:left">סה"כ הסעות:</th>
+                                            <th id="center_patients_rides_footer_total"></th>
+                                        </tr>
+                                    </tfoot>
                                 </table>
                             </div>
 
