Squashed commit of the following:
commit 5c23e3501fa20c9bb614f9f04a1f7d092f92f8eb
Merge: 7aff3b2 966c167
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Thu Dec 30 22:14:42 2021 +0200

    Merge branch 'master' into Yogev_Strauber_RCP

commit 7aff3b27a3ff17ddacac006a16ae1de16aa26b32
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Thu Dec 30 22:13:36 2021 +0200

    Update DB_TracksChanges.sql

    clean file before merge to master

commit cca1b1267dae3ae84b09106f0ba24c6998e8985a
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Thu Dec 30 22:12:21 2021 +0200

    Update login.html

commit b06f49aa837363d80e9faf8a6a6e5972eecdedfd
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Thu Dec 30 21:34:19 2021 +0200

    Update login.html

commit 1b37643166e2b950dd62c11c0ce1d46c02120486
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Thu Dec 30 20:31:16 2021 +0200

    Update RidePat.cs

    fix UTC change (isDayLight) when creating multiple rides
    v1 with Benny

commit e67461e6263d8d4b851ca5ab39dd6de80a0828c1
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Mon Dec 27 23:26:01 2021 +0200

    Update login.html

commit 8e4c6d85b9329a61c90a905f7300aabd77961aa0
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Mon Dec 27 23:23:23 2021 +0200

    Update RidePat.cs

    fix to FixDateAfterUTCChange method
    NOT ENTIRELEY FINISHED YET !!!

    Version 2.0

commit e8733cede45d332127b1b9fe20a1397172c570e6
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Sun Dec 26 23:03:13 2021 +0200

    Update RidePat.cs

    fix to FixDateAfterUTCChange method
    NOT FINISHED YET !!!

commit bedf833283ec2864fbe5b33b2d4df5cc39903294
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Sun Dec 26 18:55:39 2021 +0200

    Update login.html

commit d98617539a8e9bee71192fc71f2fc3838ca92f1d
Author: Yogev Strauber <yogev.strauber@gmail.com>
Date:   Sun Dec 26 18:48:39 2021 +0200

    Update RidePat.cs

    fix issue x i

--- a/Road to Recovery/pages/rideCandidates.html
+++ b/Road to Recovery/pages/rideCandidates.html
@@ -461,6 +461,36 @@
             });
             //#endregion
 
+            //#region candidate ridepat
+            $('#datatable-morning tbody').on('click', '.candidate', function () {
+                //editButton(this);
+                alert("in candidate");
+            });
+
+            $('#datatable-afternoon tbody').on('click', '.candidate', function () {
+                //editButton(this);
+                alert("in candidate");
+
+            });
+
+
+            $('#datatable-tomorrow tbody').on('click', '.candidate', function () {
+                //editButton(this);
+                alert("in candidate");
+
+            });
+
+            $('#datatable-future tbody').on('click', '.candidate', function () {
+                //editButton(this);
+                //alert("in candidate");
+                suggestCandidate(this);
+
+            });
+            //#endregion
+
+
+
+
             //#region show target form
             /*
              IMPORTANT NOTE
@@ -948,6 +978,39 @@
 
         }
 
+        function getCandidates(ridePatNum) {
+            $.ajax({
+                dataType: "json",
+                url: "WebService.asmx/getCandidates",
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ ridePatNum: ridePatNum }),
+                type: "POST",
+                async: false,
+                //data: JSON.stringify({}),
+                success: getCandidatesSuccessCB,
+                error: getCandidatesErrorCB
+            });
+        }
+
+
+        function getCandidatesSuccessCB(data) {
+            //alert("in getCandidatesSuccessCB success");
+            candidates = JSON.parse(data.d);
+            console.log("*** Super Drivers Candidate List ***");
+            console.log(candidates.SuperDriversList);
+            console.log("*** Regular Drivers Candidate List ***");
+            console.log(candidates.RegularDriversList);
+            console.log("*** Newbies Drivers Candidate List ***");
+            console.log(candidates.NewBies);
+
+        }
+
+        function getCandidatesErrorCB(err) {
+            alert("Error in getCandidatesErrorCB");
+        }
+
+
+
         function getCoors() {
             $.ajax({
                 dataType: "json",
@@ -1052,6 +1115,15 @@
             arr_details = { RidePatNum: ridePat.name, func: "edit" }; //ridePat.name=RidePatNum
             GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_details));
             location.href = "ridePatForm.html";
+        }
+
+        function suggestCandidate(ridePat) {
+            //arr_details = { RidePatNum: ridePat.name, func: "edit" }; //ridePat.name=RidePatNum
+            //GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_details));
+            //location.href = "ridePatForm.html";
+            RidePatNum = parseInt(ridePat.name); // holds the ridepatnum
+            getCandidates(RidePatNum);
+            //alert(RidePatNum);
         }
 
         function deleteRidePat(ridePat, deleteBtn, thistable) {
@@ -1492,7 +1564,9 @@
                         //#region buttons
                         editBtn = `<button type='button' class='edit btn btn-icon waves-effect waves-light btn-secondary btn-sm m-r-5 m-b-5' id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='עריכה'><i class='ti-pencil'></i></button>`;
                         deleteBtn = `<button type='button' class='remove btn btn-icon waves-effect waves-light btn-secondary btn-sm m-b-5'id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='מחיקה'><i class='fa fa-remove'></i></button>`;
-                        btnStr = `<div class='btnsInSameLine'>${editBtn} ${deleteBtn}</div>`;
+                        candidateBtn = `<button type='button' class='candidate btn btn-icon waves-effect waves-light btn-secondary btn-sm m-b-5'id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='הצעת מועמדים'><i class='fa fa-search-minus'></i></button>`;
+
+                        btnStr = `<div class='btnsInSameLine'>${editBtn} ${deleteBtn}${candidateBtn}</div>`;
                         //#endregion buttons
 
                         thisRidePat = {
@@ -1937,14 +2011,10 @@
             }
 
             if (numOfEscorts > 0) {
-
-                if (numOfEscorts > 1) {
-                    numOfPassengers = `<span class="numOfPassengers">${numOfEscorts + (ridepat.OnlyEscort ? 0 : 1)//+1 is the patient himself
-                        } נוסעים</span>`;
-                    numOfPassengers_English = `<span class="numOfPassengers">${numOfEscorts + (ridepat.OnlyEscort ? 0 : 1)
-                        } passengers</span>`;
-
-                }
+                numOfPassengers = `<span class="numOfPassengers">${numOfEscorts + 1//+1 is the patient his-self
+                    } נוסעים</span>`;
+                numOfPassengers_English = `<span class="numOfPassengers">${numOfEscorts + 1
+                    } passengers</span>`;
 
                 escortsPhone2render = '<span class="escortsPhone2render block">מלווים: ';
                 numOfRealEscorts = 0;
@@ -2501,7 +2571,7 @@
     </div>
     <div class="ContextMenu_dropdown hidden">
         להסיר סימון עודכן לאחרונה מתא זה?
-        <input onclick="add2IhaveSeenAllready()" class="dropbtn" type="button" value="כן" />
+            <input onclick="add2IhaveSeenAllready()" class="dropbtn" type="button" value="כן" />
     </div>
 </body>
 </html>
