--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -87,6 +87,8 @@
         arr_addressRows = [];
         $.jgrid.defaults.responsive = true;
         $.jgrid.defaults.styleUI = 'Bootstrap';
+        let OldCellPhone = '';
+
 
         function generateCities() {
 
@@ -256,6 +258,7 @@
                 success: function (data) {
                     var volunteer = JSON.parse(data.d);
                     console.log(volunteer)
+                    OldCellPhone = volunteer.CellPhone;
                     GENERAL.VOLUNTEERS.setVolunteersList(volunteer);
                     var location = "";
                     for (i in volunteer.PrefArea) {
@@ -279,17 +282,18 @@
                     $("#volunteerEnglishName").val(volunteer.EnglishName);
                     $("#firstA").val(volunteer.FirstNameA);
                     $("#lastA").val(volunteer.LastNameA);
-                    var temp = volunteer.JoinDate.substring(volunteer.JoinDate.indexOf("(") + 1, volunteer.JoinDate.indexOf(")"))
-                    var jdate = new Date(parseInt(temp));//.toISOString();
-                    var jday = jdate.getDate();
-                    var jmonth = jdate.getMonth() + 1;
-                    var jyear = jdate.getFullYear();
-                    if (jday < 10) jday = "0" + jday;
-                    if (jmonth < 10) jmonth = "0" + jmonth;
-                    //jdate = jday + "/" + jmonth + "/" + jyear
-                    jdate = jyear + "-" + jmonth + "-" + jday;
-                    document.getElementById("joinDate").value = jdate;
-                    //$("#joinDate").value = jdate;
+
+                    if (volunteer.JoinDate) {
+                        var temp = volunteer.JoinDate.substring(volunteer.JoinDate.indexOf("(") + 1, volunteer.JoinDate.indexOf(")"))
+                        var jdate = new Date(parseInt(temp));
+                        var jday = jdate.getDate();
+                        var jmonth = jdate.getMonth() + 1;
+                        var jyear = jdate.getFullYear();
+                        if (jday < 10) jday = "0" + jday;
+                        if (jmonth < 10) jmonth = "0" + jmonth;
+                        jdate = jyear + "-" + jmonth + "-" + jday;
+                        document.getElementById("joinDate").value = jdate;
+                    }
                     $("#remarks").val(volunteer.Remarks);
                     $("#phone1").val(volunteer.CellPhone);
                     $("#phone2").val(volunteer.CellPhone2);
@@ -365,7 +369,7 @@
             location.href = "viewVolunteer.html";
         }
 
-        function goBack(){
+        function goBack() {
             history.back();
         }
 
@@ -556,7 +560,6 @@
                                                     <label class="col-sm-2 control-label">טלפון ראשי&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6">
                                                         <input id="phone1" dir="ltr" name="phone1" type="text" class="form-control" placeholder="0xxxxxxxxx או 0xxxxxxxx">
-
                                                     </div>
                                                 </div>
                                             </div>
@@ -920,9 +923,12 @@
                     //}
                     var nameA = $("#firstA").val();
                     var lastNameA = $("#lastA").val();
+
                     if ($("#joinDate").val() != "")
                         var joinDate = new Date($("#joinDate").val());
-                    else joinDate = new Date();
+                    else joinDate = null;
+
+
                     //if (joinDate != "") {
                     //    var joinDay = parseInt(joinDate.substring(0, 2));
                     //    var joinMonth = parseInt(joinDate.substring(3, 5)) - 1;
@@ -975,6 +981,9 @@
                         city: city, address: address, email: email, joinDate: joinDate, gender: gender, KnowsArabic: knowsArabic,
                         typeVol: typeVol, IsActive: active, Remarks: remark, DisplayName: displayName, EnglishName: englishName, IsAssistant: isHelper, VolunteerIdentity: VolunteerIdentity, //birthdate: bdate,
                         EnglishFN: englishFN, EnglishLN: englishLN, BirthDate: birthDate, IsDriving: isDriving, Role: role
+                    }
+                    if (func === 'edit') {
+                        volunteer.OldCellPhone = OldCellPhone;
                     }
                     $.ajax({
                         dataType: "json",
