--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -134,7 +134,7 @@
         </div>
     </div>
     <div class="text-center">
-        <<<<<<< HEAD תאריך עדכון אחרון: 31/12/2021 00:10=======תאריך עדכון אחרון: 30/12/2021 22:25>>>>>>> master
+        תאריך עדכון אחרון: 30/12/2021 22:25
     </div>
     <div class="row" id="footer">
         <div class="col-sm-4">
